--- a/css/main.css
+++ b/css/main.css
@@ -88,6 +88,7 @@ img {
 .container {
   padding-left: 15px;
   padding-right: 15px;
+  overflow: auto;
 }
 
 @media screen and (min-width: 480px) {
@@ -166,23 +167,30 @@ img {
   color: var(--white-color);
 }
 
-@media screen and (max-width: 767px) {
-  .nav-list {
-    display: none;
-  }
-  .menu__open-btn {
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    margin-left: auto;
-    line-height: 0;
-    fill: var(--secondary-text-color);
-  }
-  .menu__open-btn:hover,
-.menu__open-btn:focus {
-    fill: var(--primary-decor-color);
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
   }
 }
+.nav-list {
+  display: none;
+}
+
+.menu__open-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  margin-left: auto;
+  line-height: 0;
+  fill: var(--secondary-text-color);
+}
+
+.menu__open-btn:hover,
+.menu__open-btn:focus {
+  fill: var(--primary-decor-color);
+}
+
 @media screen and (min-width: 768px) {
   .nav {
     display: -webkit-box;
@@ -335,12 +343,14 @@ img {
     color: #2196F3;
   }
 }
-@media screen and (max-width: 767px) {
-  .contacts {
-    display: none;
-  }
+.contacts {
+  display: none;
 }
+
 @media screen and (min-width: 768px) {
+  .contacts {
+    display: block;
+  }
   .contscts__item:not(:last-child) {
     margin-bottom: 10px;
   }
@@ -996,7 +1006,7 @@ img {
 .subscribe-form__input {
   display: block;
   height: 50px;
-  width: 450px;
+  width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   color: rgba(255, 255, 255, 0.6);
@@ -1044,6 +1054,9 @@ img {
   .subscribe-form {
     margin-left: auto;
     margin-right: auto;
+  }
+  .subscribe-form__input {
+    width: 450px;
   }
 }
 @media screen and (min-width: 1200px) {
