--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -12,28 +12,16 @@
     color: var(--primary-decor-color);
 }
 
-// @media screen and (min-width: 768px) {
-//     .header__logo {
-//         margin-right: 88px;
-//     }
-// }
+.footer__logo {
+  margin-bottom: 28px;
+  color: var(--white-color);
+}
 
-// @media screen and (min-width: 1200px) {
-//     .logo {
-//         font-size: 26px;
-//         line-height: 1.19;       
-//     }
+@media screen and (min-width: 1200px) {
+    .logo {
+        font-size: 26px;
+        line-height: 1.19;       
+    }
+}
 
-//     .header__logo {
-//         margin-right: 94px;
-//     }
-// }
-
- 
-  
-  
-  .footer__logo {
-    margin-bottom: 28px;
-    color: var(--white-color);
-  }
   
