--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -54,7 +54,7 @@
 .subscribe-form__input {
     display: block;
     height: 50px;
-    width: 450px;
+    width: 100%;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     color: rgba(255, 255, 255, 0.6);
@@ -98,6 +98,10 @@
     .subscribe-form {
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .subscribe-form__input {
+        width: 450px;
     }
 }
 
