--- a/css/main.css
+++ b/css/main.css
@@ -897,6 +897,8 @@ img {
 
 .portfolio-list__link {
   display: block;
+  height: 100%;
+  border: 1px solid var(--secondary-border-color);
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -943,10 +945,7 @@ img {
 }
 
 .portfolio-wrapper {
-  height: calc(100% - 294px);
   padding: 20px 24px 20px 24px;
-  border: 1px solid var(--secondary-border-color);
-  border-top: 0;
 }
 
 .portfolio-list__title {
