--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -50,6 +50,8 @@
   
   .portfolio-list__link {
     display: block;
+    height: 100%;
+    border: 1px solid var(--secondary-border-color);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover {
@@ -93,10 +95,7 @@
 }
 
 .portfolio-wrapper {
-  height: calc(100% - 294px);
   padding: 20px 24px 20px 24px;
-  border: 1px solid var(--secondary-border-color);
-  border-top: 0;
 }
 
 .portfolio-list__title {
