--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -6,7 +6,6 @@
     url(../images/hero-mobile.jpg);
   background-size: cover;
   background-color: var(--secondary-dark-color);
-  max-width: 480px;
   padding-top: 118px;
   padding-bottom: 118px;
   margin-left: auto;
@@ -55,7 +54,6 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero-tablet.jpg);
-    max-width: 768px;
   }
 
   @media (min-devixe-pixel-ratio: 2), (min-resolurion: 192dpi), (min-resolution: 2dppx) {
@@ -77,6 +75,8 @@
     ),
     url(../images/hero.jpg);
     max-width: 1600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 
   .hero__title {
