--- a/sass/components/_person-form.scss
+++ b/sass/components/_person-form.scss
@@ -1,19 +1,15 @@
+.person-form {
+  width: 100%;
+}
+
 .person-form__title {
-    margin-bottom: 30px;
+    margin-bottom: 15px;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 14px;
     line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--secondary-text-color);
-}
-
-@media screen and (min-width: 1200px) {
-  .person-form__title {
-    margin-bottom: 12px;
-    line-height: 1.15;
-  }
-  
 }
   
 .person-form__text {
@@ -65,8 +61,8 @@
 
 .person-form__message {
   width: 100%;
-  height: 120px;
-  padding: 12px 16px;
+  height: 80px;
+  padding: 12px 10px;
   margin-top: 4px;
   margin-bottom: 20px;
   border: 1px solid rgba(33, 33, 33, 0.2);
@@ -133,4 +129,16 @@
   margin-top: 30px;
   padding-left: 52px;
   padding-right: 52px;
+}
+
+@media screen and (min-width:450px) {
+  .person-form__title {
+    margin-bottom: 30px;
+    font-size: 20px;
+  }
+
+  .person-form__message {
+    height: 120px;
+    padding: 12px 16px;
+  }
 }
