--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -78,9 +78,9 @@
   width: 100%;
   top: 0;
   left: 0;
-  padding: 63px 24px;
+  padding: 32px 24px;
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: #FFFFFF;
@@ -114,7 +114,25 @@
   color: var(--primary-text-color);
 }
 
+@media screen and (min-width: 360px) {
+
+  .portfolio-list__overlay {
+    padding: 36px 24px;
+    font-size: 16px;
+  }
+
+  .portfolio-filter__btn {
+    font-size: 16px;
+  }
+
+}
+
 @media screen and (min-width: 480px) {
+
+  .portfolio-list__overlay {
+    padding: 77px 24px;
+    font-size: 18px;
+  }
 
   .portfolio-filter__btn {
     font-size: 16px;
@@ -146,6 +164,10 @@
     margin-left: 30px;
     margin-top: 30px;
    }
+
+   .portfolio-list__overlay {
+    padding: 49px 24px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
@@ -156,4 +178,8 @@
     max-width: 370px;
     flex-basis: calc((100% - 90px) / 3);
   }  
+
+  .portfolio-list__overlay {
+    padding: 63px 24px;
+  }
 }
